WebShop.API/src/main/java/com/example/webshopapi/error/exception/OrderNotFoundException.java
package com.example.webshopapi.error.exception;

public class OrderNotFoundException extends RuntimeException {
    public OrderNotFoundException(String message) {
        super(message);
    }
}